--- a/_sass/components/_mainnav.scss
+++ b/_sass/components/_mainnav.scss
@@ -33,6 +33,7 @@
     .nds-topbar-info {
         display: flex;
         gap: var(--spacing-xl);
+        margin-inline-start: auto;
     }
 
 
